--- a/.github/workflows/PostmanTest.yml
+++ b/.github/workflows/PostmanTest.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 jobs:
-  cypress-run:
+  test:
     runs-on: ubuntu-latest
     
     env:
@@ -43,4 +43,4 @@ jobs:
         run: npm install -g newman
   
       - name: Run Postman Test 1
-        run: newman run "Postman/AccountManagertest.postman_collection.json"
+        run: newman run "Postman/AccountManagertest.postman_collection"
